@@ -1,3 +1,12 @@
+2018-12-16  Tom Tromey  <tom@tromey.com>
+
+	* symfile.h (mdebug_build_psymtabs, elfmdebug_build_psymtabs):
+	Don't declare.
+	* mipsread.c: Include mdebugread.h.
+	* mdebugread.h (mdebug_build_psymtabs, elfmdebug_build_psymtabs):
+	Declare.
+	* elfread.c: Include mdebugread.h.
+
 2019-01-03  Tom Tromey  <tom@tromey.com>
 
 	* tui/tui-source.c (tui_set_source_content): Use xstrdup.
